mar-2023-k8s-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: routing-system
  labels:
    routingZone: "internalSecure"
