mar-2023-k8s-ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: routing-system
spec:
  ports:
  - name: secureHttp
    port: 443
    targetPort: 8443
  selector:
    app: auth-handler
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: routing-system
spec:
  ports:
  - name: apiHttp
    port: 80
    targetPort: 8080
  selector:
    app: api-handler
